--- a/quizminado/src/main/webapp/WEB-INF/web.xml
+++ b/quizminado/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,12 @@
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
 
+	<listener>
+		<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+	</listener>
+	<resource-env-ref>
+		<resource-env-ref-name>BeanManager</resource-env-ref-name>
+		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+	</resource-env-ref>
+
 </web-app>
