--- a/quizminado/pom.xml
+++ b/quizminado/pom.xml
@@ -117,6 +117,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.6</version>
 		</dependency>
+
+		<!-- Utils -->
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>quizminado</finalName>
